trying to follow the 8. yt class

--- a/v5.0_ejs_yt/frontend/addCreator.html
+++ b/v5.0_ejs_yt/frontend/addCreator.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Edit Creator</title>
+    <title>Add new creator</title>
 
     <link rel="stylesheet" href="style.css">
 
@@ -16,22 +16,22 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="editGallery.html">Edit gallery</a></li>
         <li><a href="creators.html">Creators</a></li>
+        <li><a href="addPicture.html">Add picture</a></li>
     </ul>
 
     <div class="contentDiv" id="content">
-        <h2 style="text-align:center">Edit Creator</h2>
+        <h2 style="text-align:center">Creators</h2>
 
         <div class="card">
-            <label>Change profile picture (optional)</label>
+            <label>Add profile picture (optional)</label>
             <div id="addPicture">
                 <input type="file" id="fileInput" accept="image/*">
               </div>
             <p><input placeholder="Name"></p>
             <p><input placeholder="Email"></p>
-            <p>Number of pictures</p>
             <div>
-                <a href="creators.html"><button>Cancel</button></a>
-                <button>Update</button>
+                <a href="gallery.html"><button>Cancel</button></a>
+                <button>Add creator</button>
             </div>
         </div>
     </div>
