--- a/v5.0_ejs_yt/frontend/editPicture.html
+++ b/v5.0_ejs_yt/frontend/editPicture.html
@@ -12,6 +12,7 @@
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="editGallery.html">Edit gallery</a></li>
         <li><a href="creators.html">Creators</a></li>
+        <li><a href="addPicture.html">Add picture</a></li>
       </ul>
     
       <div class="contentDiv" id="content">
