--- a/v5.0_ejs_yt/frontend/editGallery.html
+++ b/v5.0_ejs_yt/frontend/editGallery.html
@@ -15,6 +15,7 @@
     <li><a href="gallery.html">Gallery</a></li>
     <li><a href="editGallery.html">Edit gallery</a></li>
     <li><a href="creators.html">Creators</a></li>
+    <li><a href="addPicture.html">Add picture</a></li>
   </ul>
 
   <div class="contentDiv" id="content">
